# Scalable-Collaborative-zkSNARK

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
client/: Cargo.toml
client/src/: main.rs
config/: config.json
dist-primitive/: Cargo.toml
dist-primitive/benches/: poly_comm.rs  pss.rs
dist-primitive/examples/: dacc_product.rs  delegator.rs  msm.rs  poly_comm.rs  prod_acc.rs  sumcheck.rs
dist-primitive/src/: dacc_product.rs  degree_reduce.rs  dmsm.rs  dperm.rs  dpoly_comm.rs  dsumcheck.rs  lib.rs  mle.rs  unpack.rs
dist-primitive/src/utils/: mod.rs  operator.rs  serializing_net.rs  timer.rs
dist-sumcheck/: Cargo.toml
dist-sumcheck/examples/: delegator.rs  msm.rs  sumcheck.rs
dist-sumcheck/src/: degree_reduce.rs  dmsm.rs  dperm.rs  dsumcheck.rs  lib.rs  serializing_net.rs
dist-sumcheck/src/utils/: serializing_net.rs  timer.rs
gkr/: Cargo.toml
gkr/examples/: bench_gkr.rs  gkr.rs
gkr/src/: dgkr.rs  gkr.rs  lib.rs
hack/: bench_acc_prod.sh  bench_hyperplonk.sh  bench_poly_comm.sh  bench_sumcheck.sh  ip_address.txt  local.sh  plot.ipynb  prepare-server.sh  read_data.ipynb  run_all.sh  run_clients.py
hack/run-cpermcheck/: handle_server.sh  ip_addresses.txt  output.txt  pack.sh  run.sh
hack/run-dpermcheck/: pack.sh  run.sh
hack/run-gkr/: handle_server.sh  ip_addresses.txt  log_0_10_5.txt  log_0_11_5.txt  log_0_12_5.txt  log_0_13_5.txt  log_0_14_5.txt  log_0_15_5.txt  log_0_16_5.txt  log_0_17_5.txt  log_0_18_5.txt  log_0_19_5.txt  log_0_20_5.txt  log_0_21_5.txt  log_0_22_5.txt  log_0_23_5.txt  log_0_24_5.txt  log_0_25_5.txt  log_0_26_5.txt  log_0_27_5.txt  log_0_28_5.txt  log_0_29_5.txt  log_0_30_5.txt  log_0_31_5.txt  log_0_32_5.txt  log_0_5_5.txt  log_0_6_5.txt  log_0_7_5.txt  log_0_8_5.txt  log_0_9_5.txt  pack.sh  pack_gkr.sh  prepare_gkr.sh  run.sh  run_gkr.sh
hack/run-gkr-local/: handle_server.sh  ip_addresses.txt  log_0_10.txt  log_0_11.txt  log_0_12.txt  log_0_13.txt  log_0_14.txt  log_0_15.txt  log_0_16.txt  log_0_17.txt  log_0_18.txt  log_0_19.txt  log_0_5.txt  log_0_6.txt  log_0_7.txt  log_0_8.txt  log_0_9.txt  pack_gkr.sh  prepare_gkr.sh
hack/run-hyperplonk/: handle_server.sh  ip_addresses.txt  pack.sh  run.sh
hack/run-hyperplonk-dataparallel/: handle_server.sh  pack.sh  run.sh
hack/run-hyperplonk-local/: run_hyperplonk.sh
hack/run-zksaas/: handle_server.sh  ip_addresses.txt  log_0_20.txt  log_0_21.txt  log_0_22.txt  log_0_23.txt  log_0_24.txt  log_0_25.txt  log_0_26.txt  log_100_20.txt  log_100_21.txt  log_100_22.txt  log_100_23.txt  log_100_24.txt  log_100_25.txt  log_100_27.txt  log_101_20.txt  log_101_21.txt  log_101_22.txt  log_101_23.txt  log_101_24.txt  log_101_25.txt  log_101_32.txt  log_102_20.txt  log_102_21.txt  log_102_22.txt  log_102_23.txt  log_102_24.txt  log_102_25.txt  log_102_31.txt  log_103_20.txt  log_103_21.txt  log_103_22.txt  log_103_23.txt  log_103_24.txt  log_103_25.txt  log_103_27.txt  log_104_20.txt  log_104_21.txt  log_104_22.txt  (+871 more)
hyperplonk/: Cargo.toml
hyperplonk/examples/: bench_cpermcheck.rs  bench_dpermcheck.rs  bench_hyperplonk.rs  bench_hyperplonk_dataparallel.rs  bench_permcheck.rs  hyperplonk.rs  hyperplonk_local.rs  permcheck.rs  prodcheck.rs
hyperplonk/src/: d_hyperplonk.rs  dhyperplonk.rs  hyperplonk.rs  lib.rs
mpc-net/: Cargo.toml  README.md
mpc-net/src/: lib.rs  multi.rs
mpc-net/src/utils/: timer.rs
network-address/: 128  16  256  32  4  64  8
secret-sharing/: Cargo.toml  README.md
secret-sharing/src/: lib.rs  pss.rs
