[package]
name = "mpc-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
report = []

[dependencies]
colored = "2.0.4"
ark-std = {version = "0.4.0", default-features = false, features = [ "print-trace", "std" ]}
log = {version = "0.4"}
futures = "0.3.29"
async-trait = "0.1.74"
tokio = { version = "1.34.0", features = ["net", "time", "fs", "io-util", "macros", "rt-multi-thread"] }
auto_impl = "1.1.0"
parking_lot = "0.12.1"
tokio-util = { version = "0.7.10", features = ["codec"] }
async_smux = "0.3.0"
serde = { version = "1.0.193", features = ["derive"] }
env_logger = "0.11.3"

